--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-slate
 name: Joshua Owens
-description: My Portfolio
+description: A 
+title: Joshua Owens
 author: Joshua Owens
 author_email: owensj2921@gmail.com
