more config stuff

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 name: Joshua Owens
-description: A 
+description: My Portfolio
 title: Joshua Owens
 author: Joshua Owens
 author_email: owensj2921@gmail.com
